--- a/common.ru.po
+++ b/common.ru.po
@@ -4,20 +4,21 @@
 #
 # Translators:
 # adem4ik, 2014
+# afkpuz, 2025
 # Alex Talker <alextalker7@gmail.com>, 2014-2015
 # Andrei Stepanov, 2014
 # Andrei Stepanov, 2014-2025
 # Andrey P <andrey.pyntikov@gmail.com>, 2016
 # Artem Vorotnikov <artem@vorotnikov.me>, 2015
 # berry, 2021,2023
+# Blueberryy <igory.ygr200@gmail.com>, 2021,2023
+# Blueberryy <igory.ygr200@gmail.com>, 2021
 # Blueberryy, 2021,2023
-# Blueberryy, 2021
-# Blueberryy, 2021,2023
-# Blueberryy, 2021,2023
+# Blueberryy <igory.ygr200@gmail.com>, 2021,2023
 # Evgenij Ivanov, 2025
 # Please do not mention me anywhere., 2025
 # afkpuz, 2025
-# Blueberryy, 2021
+# Blueberryy <igory.ygr200@gmail.com>, 2021
 # Lord Canistra <lordcanistra@gmail.com>, 2011
 # Mirio <opivy@hotmail.de>, 2017
 # Nick S <morosophos@teichisma.info>, 2018-2019
