--- a/common.nl.po
+++ b/common.nl.po
@@ -5,6 +5,7 @@
 # Translators:
 # 62197a8afd75a0a64478212fcb55f596, 2017
 # Contijn Buijs <contijn.buijs@gmail.com>, 2017
+# C. Righart, 2026
 # 62197a8afd75a0a64478212fcb55f596, 2017
 # Jonathan van der Steege <jonakeys@hotmail.com>, 2016
 # Jonathan van der Steege <jonakeys@hotmail.com>, 2016,2022
@@ -16,7 +17,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2026-01-13 07:22+0100\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: joostruis <joostruis@gmail.com>, 2024\n"
+"Last-Translator: C. Righart, 2026\n"
 "Language-Team: Dutch (http://app.transifex.com/team-xonotic/xonotic/language/"
 "nl/)\n"
 "Language: nl\n"
@@ -90,7 +91,7 @@ msgstr "FPS: %.*f"
 
 #: qcsrc/client/hud/panel/infomessages.qc:102
 msgid "^1Observing"
-msgstr "^1Aan het observeren"
+msgstr "^1Aan het waarnemen"
 
 #: qcsrc/client/hud/panel/infomessages.qc:104
 #, c-format
@@ -197,12 +198,12 @@ msgstr "^2Op dit moment in ^1warmup^2-fase!"
 
 #: qcsrc/client/hud/panel/infomessages.qc:172
 msgid "^31^2 more player is needed for the match to start."
-msgstr ""
+msgstr "Er is nog ^31^2 speler vereist om de wedstrijd te laten beginnen."
 
 #: qcsrc/client/hud/panel/infomessages.qc:174
 #, c-format
 msgid "^3%d^2 more players are needed for the match to start."
-msgstr ""
+msgstr "Er zijn nog ^3%d^2 spelers vereist om de wedstrijd te laten beginnen."
 
 #: qcsrc/client/hud/panel/infomessages.qc:184
 #: qcsrc/menu/xonotic/keybinder.qc:149
@@ -417,7 +418,7 @@ msgstr ""
 
 #: qcsrc/client/hud/panel/quickmenu.qc:861
 msgid "QMCMD^killed flagcarrier (l:%y^7)"
-msgstr ""
+msgstr "QMCMD^doodde vaandeldrager (l:%y^7)"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:861
 msgid "QMCMD^killed flagcarrier, icon"
@@ -518,7 +519,7 @@ msgstr "QMCMD^Verlaag snelheid"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:894
 msgid "QMCMD^Wall collision"
-msgstr ""
+msgstr "QMCMD^Wandbotsing"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:898
 msgid "QMCMD^Fullscreen"
@@ -625,7 +626,7 @@ msgstr ""
 
 #: qcsrc/client/hud/panel/scoreboard.qc:132
 msgid "How often a flag (CTF) or a key (Key Hunt) was captured"
-msgstr ""
+msgstr "Hoe vaak een vaandel (CTF) of een sleutel (Key Hunt) werd veroverd"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:132
 msgid "SCO^caps"
@@ -637,7 +638,7 @@ msgstr "SCO^verovertijd"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:133
 msgid "Time of fastest capture (CTF)"
-msgstr ""
+msgstr "Tijd van snelste verovering (CTF)"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:134
 msgid "Number of deaths"
@@ -649,23 +650,23 @@ msgstr "SCO^doden"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:135
 msgid "Number of keys destroyed by pushing them into void"
-msgstr ""
+msgstr "Aantal sleutels dat is vernietigd door hen in de leegte te duwen"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:135
 msgid "SCO^destructions"
-msgstr ""
+msgstr "SCO^vernietigingen"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:136
 msgid "SCO^damage dealt"
-msgstr ""
+msgstr "SCO^toegebrachte schade"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:136
 msgid "The total damage dealt"
-msgstr ""
+msgstr "De volledige schade die is toegebracht"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:137
 msgid "SCO^damage taken"
-msgstr ""
+msgstr "SCO^opgelopen schade"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:137
 msgid "The total damage taken"
@@ -689,7 +690,7 @@ msgstr ""
 
 #: qcsrc/client/hud/panel/scoreboard.qc:140
 msgid "Number of faults committed"
-msgstr ""
+msgstr "Aantal fouten begaan"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:140
 msgid "SCO^faults"
@@ -697,7 +698,7 @@ msgstr "SCO^fouten"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:141
 msgid "Number of flag carrier kills"
-msgstr ""
+msgstr "Aantal gedode vaandeldragers"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:141
 msgid "SCO^fckills"
@@ -849,7 +850,7 @@ msgstr ""
 
 #: qcsrc/client/hud/panel/scoreboard.qc:161
 msgid "Number of players pushed into void"
-msgstr ""
+msgstr "Aantal spelers dat in de leegte is geduwd"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:161
 msgid "SCO^pushes"
@@ -889,11 +890,11 @@ msgstr "SCO^rondes gewonnen"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:166
 msgid "Number of rounds played"
-msgstr ""
+msgstr "Aantal ronden gespeeld"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:166
 msgid "SCO^rounds played"
-msgstr ""
+msgstr "SCO^ronden gespeeld"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:167
 msgid "SCO^score"
@@ -905,11 +906,11 @@ msgstr "Totaalscore"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:168
 msgid "Player skill"
-msgstr ""
+msgstr "Spelervaardigheid"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:168
 msgid "SCO^skill"
-msgstr ""
+msgstr "SCO^vaardigheid"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:169
 msgid "Number of suicides"
@@ -1049,7 +1050,7 @@ msgstr ""
 #: qcsrc/menu/xonotic/dialog_multiplayer_join_serverinfo.qc:194
 #: qcsrc/menu/xonotic/dialog_multiplayer_join_serverinfo.qc:199
 msgid "N/A"
-msgstr "N/A"
+msgstr "N.V.T."
 
 #: qcsrc/client/hud/panel/scoreboard.qc:1845
 #, c-format
@@ -1066,7 +1067,7 @@ msgstr "Kaartstatistieken:"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:2150
 msgid "Monsters killed:"
-msgstr "Monsters vermoord:"
+msgstr "Monsters gedood:"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:2157
 msgid "Secrets found:"
@@ -1093,7 +1094,7 @@ msgstr "SCO^punten"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:2512
 msgid "Next map:"
-msgstr ""
+msgstr "Volgende kaart:"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:2519
 #: qcsrc/menu/xonotic/dialog_teamselect.qh:7
@@ -1256,7 +1257,7 @@ msgstr "Nee"
 
 #: qcsrc/client/hud/panel/weapons.qc:645
 msgid "Out of ammo"
-msgstr "Ammunitie is op"
+msgstr "Geen munitie meer"
 
 #: qcsrc/client/hud/panel/weapons.qc:650
 msgid "Don't have"
@@ -1371,7 +1372,7 @@ msgstr ""
 #: qcsrc/client/main.qc:1430
 #, c-format
 msgid "%d players"
-msgstr ""
+msgstr "%d spelers"
 
 #: qcsrc/client/main.qc:1432
 #, c-format
@@ -1421,11 +1422,11 @@ msgstr "Maakt mij niets uit"
 #: qcsrc/client/mapvoting.qc:379
 #, c-format
 msgid "Suggested by: %s"
-msgstr ""
+msgstr "Voorgesteld door: %s"
 
 #: qcsrc/client/mapvoting.qc:458
 msgid "Decide the gametype"
-msgstr "Kies het speltype"
+msgstr "Bepaal het speltype"
 
 #: qcsrc/client/mapvoting.qc:458
 msgid "Vote for a map"
@@ -2097,11 +2098,11 @@ msgstr "Ronden:"
 
 #: qcsrc/common/gametypes/gametype/survival/cl_survival.qc:61
 msgid "Hunter"
-msgstr ""
+msgstr "Jager"
 
 #: qcsrc/common/gametypes/gametype/survival/cl_survival.qc:67
 msgid "Survivor"
-msgstr ""
+msgstr "Overlevende"
 
 #: qcsrc/common/gametypes/gametype/survival/survival.qc:11
 #, c-format
@@ -2236,7 +2237,7 @@ msgstr ""
 
 #: qcsrc/common/items/item/ammo.qh:95 qcsrc/common/resources/all.inc:39
 msgid "Bullets"
-msgstr ""
+msgstr "Kogels"
 
 #: qcsrc/common/items/item/ammo.qh:131 qcsrc/common/resources/all.inc:48
 msgid "Rockets"
@@ -2813,7 +2814,7 @@ msgstr ""
 
 #: qcsrc/common/mutators/mutator/buffs/buff/ammo.qh:11
 msgid "Ammo"
-msgstr "Ammunitie"
+msgstr "Munitie"
 
 #: qcsrc/common/mutators/mutator/buffs/buff/bash.qc:27
 #, c-format
@@ -2855,7 +2856,7 @@ msgstr ""
 
 #: qcsrc/common/mutators/mutator/buffs/buff/flight.qh:11
 msgid "Flight"
-msgstr ""
+msgstr "Vlucht"
 
 #: qcsrc/common/mutators/mutator/buffs/buff/inferno.qc:23
 #, c-format
@@ -3006,7 +3007,7 @@ msgstr "Verhuld"
 
 #: qcsrc/common/mutators/mutator/damagetext/ui_damagetext.qc:23
 msgid "Damage Text"
-msgstr ""
+msgstr "Schadetekst"
 
 #: qcsrc/common/mutators/mutator/damagetext/ui_damagetext.qc:25
 msgid "Draw damage numbers"
@@ -3119,7 +3120,7 @@ msgstr ""
 #: qcsrc/common/mutators/mutator/hook/cl_hook.qc:12
 #, c-format
 msgid "^3grappling hook^8 is enabled, press ^3%s^8 to use it"
-msgstr ""
+msgstr "^3werphaak^8 is ingeschakeld, druk op ^3%s^8 om hem te gebruiken"
 
 #: qcsrc/common/mutators/mutator/hook/hook.qc:11
 #, c-format
@@ -3133,7 +3134,7 @@ msgstr ""
 #: qcsrc/common/mutators/mutator/offhand_blaster/offhand_blaster.qc:12
 #: qcsrc/common/weapons/weapon/hook.qc:434
 msgid "hook"
-msgstr ""
+msgstr "haak"
 
 #: qcsrc/common/mutators/mutator/hook/hook.qc:13
 #, c-format
@@ -3206,7 +3207,7 @@ msgstr ""
 
 #: qcsrc/common/mutators/mutator/instagib/items.qh:29
 msgid "Vaporizer ammo"
-msgstr ""
+msgstr "Verdampermunitie"
 
 #: qcsrc/common/mutators/mutator/instagib/items.qh:57
 #: qcsrc/common/mutators/mutator/instagib/items.qh:60
@@ -3241,7 +3242,7 @@ msgstr ""
 
 #: qcsrc/common/mutators/mutator/nades/nade/ammo.qh:23
 msgid "Ammo grenade"
-msgstr ""
+msgstr "Munitiegranaat"
 
 #: qcsrc/common/mutators/mutator/nades/nade/darkness.qc:140
 #, c-format
@@ -3258,7 +3259,7 @@ msgstr ""
 
 #: qcsrc/common/mutators/mutator/nades/nade/darkness.qh:21
 msgid "Darkness grenade"
-msgstr ""
+msgstr "Duistergranaat"
 
 #: qcsrc/common/mutators/mutator/nades/nade/entrap.qc:72
 #, c-format
@@ -3270,7 +3271,7 @@ msgstr ""
 
 #: qcsrc/common/mutators/mutator/nades/nade/entrap.qh:24
 msgid "Entrap grenade"
-msgstr ""
+msgstr "Vanggranaat"
 
 #: qcsrc/common/mutators/mutator/nades/nade/heal.qc:52
 #, c-format
@@ -3369,6 +3370,8 @@ msgid ""
 "If this grenade is destroyed by an attacker, it will deal some damage to "
 "them."
 msgstr ""
+"Als deze granaat door een aanvaller wordt vernietigd, zal deze enige schade "
+"aanrichten."
 
 #: qcsrc/common/mutators/mutator/nades/nade/translocate.qh:19
 msgid "Translocate grenade"
@@ -3384,7 +3387,7 @@ msgstr ""
 
 #: qcsrc/common/mutators/mutator/nades/nade/veil.qh:24
 msgid "Veil grenade"
-msgstr ""
+msgstr "Sluiergranaat"
 
 #: qcsrc/common/mutators/mutator/nades/nades.qc:49
 #, c-format
@@ -3428,7 +3431,7 @@ msgstr ""
 #: qcsrc/common/mutators/mutator/new_toys/new_toys.qc:31
 #, c-format
 msgid "The current %s weapons are:"
-msgstr ""
+msgstr "De huidige %s wapens zijn:"
 
 #: qcsrc/common/mutators/mutator/new_toys/new_toys.qh:7
 #: qcsrc/common/util.qc:297
@@ -3757,7 +3760,7 @@ msgstr "Raketvliegen"
 
 #: qcsrc/common/mutators/mutator/status_effects/status_effect/burning.qh:16
 msgid "Burning"
-msgstr ""
+msgstr "Branden"
 
 #: qcsrc/common/mutators/mutator/status_effects/status_effect/spawnshield.qh:10
 msgid "Spawn Shield"
@@ -3765,7 +3768,7 @@ msgstr ""
 
 #: qcsrc/common/mutators/mutator/status_effects/status_effect/stunned.qh:16
 msgid "Stunned"
-msgstr ""
+msgstr "Verdoofd"
 
 #: qcsrc/common/mutators/mutator/status_effects/status_effect/superweapons.qh:7
 msgid "Superweapons"
@@ -3810,6 +3813,9 @@ msgid ""
 "%s is a mutator that enables jumping off walls for added mobility. To do a "
 "wall jump, tap %s when against a wall."
 msgstr ""
+"%s is een mutator die springen vanaf wanden mogelijk maakt voor meer "
+"beweeglijkheid. Om een wandsprong uit te voeren, tik %s wanneer u tegen een "
+"wand staat."
 
 #: qcsrc/common/mutators/mutator/walljump/walljump.qc:83
 msgid ""
@@ -3820,7 +3826,7 @@ msgstr ""
 #: qcsrc/common/mutators/mutator/walljump/walljump.qh:5
 #: qcsrc/common/util.qc:316
 msgid "Wall jumping"
-msgstr ""
+msgstr "Wandspringen"
 
 #: qcsrc/common/mutators/mutator/waypoints/all.inc:3
 msgid "Waypoint"
@@ -3844,7 +3850,7 @@ msgstr "Bevroren!"
 
 #: qcsrc/common/mutators/mutator/waypoints/all.inc:11
 msgid "Reviving"
-msgstr ""
+msgstr "Herleven"
 
 #: qcsrc/common/mutators/mutator/waypoints/all.inc:13
 msgid "Item"
@@ -3875,7 +3881,7 @@ msgstr "Vernietig"
 
 #: qcsrc/common/mutators/mutator/waypoints/all.inc:22
 msgid "Push"
-msgstr ""
+msgstr "Duw"
 
 #: qcsrc/common/mutators/mutator/waypoints/all.inc:24
 msgid "Flag carrier"
@@ -3963,7 +3969,7 @@ msgstr "Baldrager"
 
 #: qcsrc/common/mutators/mutator/waypoints/all.inc:63
 msgid "Leader"
-msgstr ""
+msgstr "Leider"
 
 #: qcsrc/common/mutators/mutator/waypoints/all.inc:66
 msgid "Goal"
@@ -4733,7 +4739,7 @@ msgstr "^BGJe hebt de ^F1%s"
 #: qcsrc/common/notifications/all.inc:721
 #, c-format
 msgid "^BGYou don't have enough ammo for the ^F1%s"
-msgstr "^BGJe hebt niet genoeg ammo voor de ^F1%s"
+msgstr "^BGJe hebt niet genoeg munitie voor de ^F1%s"
 
 #: qcsrc/common/notifications/all.inc:389
 #: qcsrc/common/notifications/all.inc:722
@@ -4745,7 +4751,7 @@ msgstr "^F1%s %s^BG kan niet meer schieten, maar zijn ^F1%s^BG kan dit wel"
 #: qcsrc/common/notifications/all.inc:723
 #, c-format
 msgid "^F1%s^BG is ^F4not available^BG on this map"
-msgstr "^F1%s^BG is ^F4niet beschikbaar^BG op deze map"
+msgstr "^F1%s^BG is ^F4niet beschikbaar^BG op deze kaart"
 
 #: qcsrc/common/notifications/all.inc:392
 #, c-format
@@ -5250,17 +5256,17 @@ msgstr ""
 #: qcsrc/common/notifications/all.inc:507
 #, c-format
 msgid "^BG%s%s^K1 got too close to ^BG%s^K1's Mortar grenade%s%s"
-msgstr ""
+msgstr "^BG%s%s^K1 kwam te dicht bij ^BG%s^K1's mortiergranaat%s%s"
 
 #: qcsrc/common/notifications/all.inc:508
 #, c-format
 msgid "^BG%s%s^K1 ate ^BG%s^K1's Mortar grenade%s%s"
-msgstr ""
+msgstr "^BG%s%s^K1 at ^BG%s^K1's mortiergranaat%s%s"
 
 #: qcsrc/common/notifications/all.inc:509
 #, c-format
 msgid "^BG%s^K1 didn't see their own Mortar grenade%s%s"
-msgstr ""
+msgstr "^BG%s^K1 zag diens eigen mortiergranaat niet%s%s"
 
 #: qcsrc/common/notifications/all.inc:510
 #, c-format
@@ -5402,11 +5408,11 @@ msgstr ""
 
 #: qcsrc/common/notifications/all.inc:560
 msgid "^BGBegin!"
-msgstr "^BGStart!"
+msgstr "^BGBegin!"
 
 #: qcsrc/common/notifications/all.inc:561
 msgid "^BGGame starts in"
-msgstr "^BGSpel start over"
+msgstr "^BGSpel begint over"
 
 #: qcsrc/common/notifications/all.inc:562
 #, c-format
@@ -5415,7 +5421,7 @@ msgstr "^BGRonde %s begint over"
 
 #: qcsrc/common/notifications/all.inc:563
 msgid "^F4Round cannot start"
-msgstr "^F4De ronde kan niet beginnen"
+msgstr "^F4Ronde kan niet beginnen"
 
 #: qcsrc/common/notifications/all.inc:568
 msgid "^F2Don't camp!"
@@ -5591,8 +5597,7 @@ msgstr "^BGPatstelling! Vijanden kunnen je nu zien op de radar!"
 #: qcsrc/common/notifications/all.inc:607
 msgid "^BGStalemate! Flag carriers can now be seen by enemies on radar!"
 msgstr ""
-"^BGPatstelling! Vlagdragers kunnen nu worden gezien door hun vijanden op de "
-"radar!"
+"^BGPatstelling! Vaandeldragers zijn nu zichtbaar voor vijanden op de radar!"
 
 #: qcsrc/common/notifications/all.inc:611
 #, c-format
@@ -5665,7 +5670,7 @@ msgstr ""
 
 #: qcsrc/common/notifications/all.inc:648
 msgid "^F2You got a ^K1BONUS GRENADE^F2!"
-msgstr ""
+msgstr "^F2U heeft een ^K1BONUSGRANAAT^F2 ontvangen!"
 
 #: qcsrc/common/notifications/all.inc:650
 #, c-format
@@ -6173,8 +6178,8 @@ msgid ""
 "^F2Now playing ^F4OVERTIME^F2!\n"
 "Keep scoring until we have a winner!"
 msgstr ""
-"^F4VERLENING^F2!\n"
-"Blijf scoren tot we een winnaar hebben!"
+"^F4VERLENGING^F2!\n"
+"Blijf scoren tot wij een winnaar hebben!"
 
 #: qcsrc/common/notifications/all.inc:773
 msgid ""
@@ -7347,7 +7352,7 @@ msgstr ""
 
 #: qcsrc/common/vehicles/vehicle/bumblebee.qh:23
 msgid "Bumblebee"
-msgstr ""
+msgstr "Hommel"
 
 #: qcsrc/common/vehicles/vehicle/racer.qc:647
 #, c-format
@@ -7847,7 +7852,7 @@ msgstr ""
 #: qcsrc/common/weapons/weapon/hook.qh:36
 #: qcsrc/menu/xonotic/dialog_multiplayer_create_mutators.qc:125
 msgid "Grappling Hook"
-msgstr "Grappling Hook"
+msgstr "Werphaak"
 
 #: qcsrc/common/weapons/weapon/machinegun.qc:422
 msgid ""
@@ -7924,7 +7929,7 @@ msgstr ""
 #: qcsrc/common/weapons/weapon/mortar.qc:400
 #, c-format
 msgid "It consumes %s ammo for every grenade launched."
-msgstr ""
+msgstr "Het verbruikt %s munitie voor iedere granaat die wordt gelanceerd."
 
 #: qcsrc/common/weapons/weapon/mortar.qc:401
 #, c-format
@@ -8536,7 +8541,7 @@ msgstr "Engels (Australië)"
 
 #: qcsrc/menu/xonotic/credits.qc:255
 msgid "English (United Kingdom)"
-msgstr ""
+msgstr "Engels (Verenigd Koninkrijk)"
 
 #: qcsrc/menu/xonotic/credits.qc:259
 msgid "Finnish"
@@ -8568,7 +8573,7 @@ msgstr ""
 
 #: qcsrc/menu/xonotic/credits.qc:338
 msgid "Irish"
-msgstr ""
+msgstr "Iers"
 
 #: qcsrc/menu/xonotic/credits.qc:341
 msgid "Italian"
@@ -8600,7 +8605,7 @@ msgstr "Portugees"
 
 #: qcsrc/menu/xonotic/credits.qc:411
 msgid "Portuguese (Brazil)"
-msgstr ""
+msgstr "Portugees (Brazilië)"
 
 #: qcsrc/menu/xonotic/credits.qc:421
 msgid "Romanian"
@@ -8624,7 +8629,7 @@ msgstr "Zweeds"
 
 #: qcsrc/menu/xonotic/credits.qc:496
 msgid "Turkish"
-msgstr ""
+msgstr "Turks"
 
 #: qcsrc/menu/xonotic/credits.qc:511
 msgid "Ukrainian"
@@ -8637,11 +8642,11 @@ msgstr "Bijdragers uit het verleden"
 #: qcsrc/menu/xonotic/cvarlist.qc:24
 #, c-format
 msgid "%d results"
-msgstr ""
+msgstr "%d uitkomsten"
 
 #: qcsrc/menu/xonotic/cvarlist.qc:24
 msgid "1 result"
-msgstr ""
+msgstr "1 uitkomst"
 
 #: qcsrc/menu/xonotic/cvarlist.qc:118
 msgid "forced to be saved to config.cfg"
@@ -8682,7 +8687,7 @@ msgstr "Aftiteling"
 
 #: qcsrc/menu/xonotic/dialog_credits.qh:8
 msgid "The Xonotic credits"
-msgstr "De Xonotic-credits"
+msgstr "De Xonotic-aftiteling"
 
 #: qcsrc/menu/xonotic/dialog_firstrun.qc:44
 msgid ""
@@ -9003,7 +9008,7 @@ msgstr "Uitschakelen"
 #: qcsrc/menu/xonotic/dialog_hudpanel_itemstime.qc:18
 #: qcsrc/menu/xonotic/dialog_hudpanel_pressedkeys.qc:16
 msgid "Enable spectating"
-msgstr ""
+msgstr "Toeschouwers toestaan"
 
 #: qcsrc/menu/xonotic/dialog_hudpanel_itemstime.qc:19
 msgid "Enable even in warmup"
@@ -10091,6 +10096,8 @@ msgstr "Wapen & item mutaties:"
 #: qcsrc/menu/xonotic/dialog_multiplayer_create_mutators.qc:126
 msgid "Players spawn with the grappling hook. Press the 'hook' key to use it"
 msgstr ""
+"Spelers verschijnen met de werphaak. Druk op de ‘haak’-toets om deze te "
+"gebruiken."
 
 #: qcsrc/menu/xonotic/dialog_multiplayer_create_mutators.qc:130
 msgid ""
@@ -12509,7 +12516,7 @@ msgstr "vrij voor allen"
 
 #: qcsrc/menu/xonotic/guide/guide.qh:9 qcsrc/menu/xonotic/guide/pages.qc:62
 msgid "Introduction"
-msgstr ""
+msgstr "Inleiding"
 
 #: qcsrc/menu/xonotic/guide/guide.qh:10
 msgid "Movement"
@@ -12525,7 +12532,7 @@ msgstr ""
 
 #: qcsrc/menu/xonotic/guide/guide.qh:18
 msgid "Vehicles"
-msgstr ""
+msgstr "Voertuigen"
 
 #: qcsrc/menu/xonotic/guide/guide.qh:19
 msgid "Turrets"
@@ -12566,7 +12573,7 @@ msgstr ""
 
 #: qcsrc/menu/xonotic/guide/pages.qc:30
 msgid "Community"
-msgstr ""
+msgstr "Gemeenschap"
 
 #: qcsrc/menu/xonotic/guide/pages.qc:32
 #, c-format
@@ -12619,7 +12626,7 @@ msgstr ""
 
 #: qcsrc/menu/xonotic/guide/pages.qc:52
 msgid "XonStat"
-msgstr ""
+msgstr "XonStat"
 
 #: qcsrc/menu/xonotic/guide/pages.qc:55
 msgid ""
@@ -13013,7 +13020,7 @@ msgstr "toon scores"
 
 #: qcsrc/menu/xonotic/keybinder.qc:137
 msgid "screenshot"
-msgstr ""
+msgstr "schermafdruk"
 
 #: qcsrc/menu/xonotic/keybinder.qc:138
 msgid "maximize radar"
@@ -13089,7 +13096,7 @@ msgstr ""
 
 #: qcsrc/menu/xonotic/keybinder.qc:183
 msgid "Development"
-msgstr ""
+msgstr "Ontwikkeling"
 
 #: qcsrc/menu/xonotic/keybinder.qc:184
 msgid "sandbox menu"
@@ -13403,7 +13410,7 @@ msgstr ""
 
 #: qcsrc/menu/xonotic/statslist.qc:208
 msgid "Skill:"
-msgstr ""
+msgstr "Vaardigheid:"
 
 #: qcsrc/menu/xonotic/statslist.qc:231
 #, c-format
